@@ -5,7 +5,7 @@ from Foundation import *
 
 try:
     import sys
-    if sys.version_info[:2] == (2,4):
+    if sys.version_info[:2] in [(2,4), (2,5)]:
         raise ImportError, "py2.4 hangs when a CFArray is created, bug was filed"
 
     # These tests are only useful on MacOS X when using MacPython
